waybar.css
* {
  border: none;
  border-radius: 0;
  font-size: 13px;
  min-height: 0;
  padding: 0;
}

window#waybar, #battery, #clock {
  background: black;
  color: white;
}

#battery, #clock, #window {
  padding: 0 5px;
}

#workspaces button {
  color: white;
  border-bottom: 2px solid transparent;
}

#workspaces button.active {
  color: white;
  border-bottom: 2px solid white;
}

